--- a/app/src/main/res/layout/dialog_update_student.xml
+++ b/app/src/main/res/layout/dialog_update_student.xml
@@ -86,7 +86,7 @@
     </LinearLayout>
 
     <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
-        android:id="@+id/FabSaveStudent"
+        android:id="@+id/FabUpdateStudent"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
@@ -108,6 +108,6 @@
         app:backgroundTint="@color/colorPrimary"
         android:textColor="@color/white"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/FabSaveStudent" />
+        app:layout_constraintTop_toTopOf="@+id/FabUpdateStudent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
